--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
     <h1> Hello there! </h1>
     <p> <b> Pushed to main </b> </p>
+    <p1> Hello there! </p1>
+    <p2> Hey I have been changed </p2>
+    <p> Conflictttt </p>
   </body>
 </html>
