--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Page for Test</title>
   </header>
   <body>
-    <p1> Hello there! </p1>
+    <h1> Hello there! </h1>
+    <p> <b> Pushed to main </b> </p>
   </body>
 </html>
