Added hey in VScode

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p1> Hello there! </p1>
     <p2> Hey I have been changed </p2>
     <p> Conflictttt </p>
+    <p> Hey </p>
   </body>
 </html>
